# lan-file-transfer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  FindLibArchive.cmake  Iconv-release-x86_64-data.cmake  LibArchive-release-x86_64-data.cmake  LibArchiveConfig.cmake  LibArchiveConfigVersion.cmake  Libwebsockets-Target-release.cmake  Libwebsockets-release-x86_64-data.cmake  LibwebsocketsConfig.cmake  LibwebsocketsTargets.cmake  Makefile  OpenSSL-release-x86_64-data.cmake  README.md  README_CN.md  cmake_install.cmake  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanfile.py  conanfile.txt  conanrun.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  default.toml  lanft.service  module-LibArchive-Target-release.cmake  module-LibArchive-release-x86_64-data.cmake  module-OpenSSL-release-x86_64-data.cmake  module-ZLIB-release-x86_64-data.cmake  nfpm.yaml  test
docs/superpowers/plans/: 2025-06-14-config-system.md  2026-06-13-lan-file-transfer.md
docs/superpowers/specs/: 2025-06-14-config-system-design.md  2026-06-13-lan-file-transfer-design.md
scripts/: postinstall.sh
src/: cli.c  compat.h  compat_getopt.c  compat_getopt.h  compat_threads.h  config.c  config.h  discovery.c  discovery.h  file_browser.c  file_browser.h  log.c  main.c  main_cli.c  network.c  network.h  protocol.h  scanner.c  scanner.h  transfer.c  transfer.h  ui.c  ui.h
